# main

./: .env-template  .gitignore  .python-version  Makefile  README.md  comments.json  mkdocs.yaml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: python-test.yml
data/: proxy_list.csv
data/processed/: onedrive_link.txt
data/raw/: coins.json  coins.py  labeled_coins.csv  subreddit_list.txt  train_test.csv
data/raw/coin_price_data/: atom.csv  avax.csv  beer.csv  bitforex.csv  btc.csv  eth.csv  ftx.csv  link.csv  luna.csv  rune.csv  safemoon.csv  sta.csv  teddydoge.csv
data/raw/output_files/: test_predictions.csv
docs/: gedp.md  lernplan_barth_baumgartner_bruelisauer_HS24.xlsx
docs/CryptoFraudDetection/elasticsearch/: data_insertion.md  data_retrieval.md  elastic_client.md
docs/CryptoFraudDetection/scraper/: comparitech.md  google_results.md  utils.md
docs/CryptoFraudDetection/utils/: enums.md  exceptions.md  logger.md  misc.md
html_notebooks/: 18-multirocket.html
notebooks/: 00-example.ipynb  00-example.qmd  01-scrape-test.ipynb  01-scrape-test.qmd  02-scraping-cg.ipynb  02-scraping-cg.qmd  02-scraping-x.qmd  02-scraping_x.qmd  03-data_split.qmd  04-scrape-reddit.ipynb  04-scrape-reddit.qmd  04_scrape_reddit.ipynb  05-scrape-reddit_metadata.ipynb  05-scrape-reddit_metadata.qmd  06-scrape-reddit.ipynb  06-scrape-reddit.qmd  06-scraping-reddit-post-url.ipynb  07-retrieving-reddit-data.ipynb  07-retrieving-reddit-data.qmd  08-unwrap-reddit.ipynb  08-unwrap-reddit.qmd  09-simple-eda-reddit.ipynb  09-simple-eda-reddit.qmd  09-simple-eda.ipynb  10-get-subreddits-coins.ipynb  10-get-subreddits-coins.qmd  11-timeseries-eda-reddit.ipynb  11-timeseries-eda-reddit.qmd  11-timeseries-eda.qmd  12-retrieving-x-data.qmd  13-simple-eda-x.qmd  14-timeseries-eda-x.qmd  15-data-pipeline.qmd  15-data-pipeline2.qmd  18-multirocket.qmd  20-embedding.qmd  21-sentiment.qmd  30-san-analysen.qmd  50-nbc.ipynb  50-nbc.qmd  (+13 more)
notebooks/html_notebooks/: 11-timeseries-eda-reddit.html  14-timeseries-eda-x.html  90-wdb-scrape-reddit.html
reports/: hyperparameter_search_gat.json  hyperparameter_search_gat_v2.json
scripts/: baseline.py  baseline_overfit_sweep.py  baseline_overfit_sweep.sh  baseline_sweep.py  baseline_sweep.sh  dummy.py  dummy.sh  dummy_sweep_agent.sh  hf_sentiment.py  hf_sentiment.sh
src/CryptoFraudDetection/: __init__.py  exceptions.py  sentiment.py
src/CryptoFraudDetection/elasticsearch/: __init__.py  data_insertion.py  data_retrieval.py  elastic_client.py
src/CryptoFraudDetection/models/: baseline.py  dummy.py
src/CryptoFraudDetection/scraper/: __init__.py  comparitech.py  discord.py  google_results.py  google_trends.py  reddit.py  telegram.py  twitter.py  utils.py  x.py
src/CryptoFraudDetection/utils/: __init__.py  data_pipeline.py  embedding.py  enums.py  exceptions.py  hf_sentiment.py  logger.py  misc.py  points_in_time.py  sentiment.py
tests/: test_scraper_comparitech.py  test_scraper_google_results.py  test_scraper_reddit.py  test_scraper_twitter.py  test_sentiment.py  test_utils_embedding.py  test_utils_hf_sentiment.py  test_utils_misc.py  test_utils_points_in_time.py
