[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CryptoFraudDetection"
version = "0.0.1"
authors = [
  { name = "Gabriel Torres Gamez" },
  { name = "Can-Elian Barth" },
  { name = "Florian Baumgartner" },
  { name = "Aaron Brülisauer" },
]
description = "Package for the CryptoFraudDetection project"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "altair==5.4.1",
  "beautifulsoup4==4.12.3",
  "black[jupyter]==24.8.0",
  "elasticsearch==8.15.1",
  "ipykernel==6.29.5",
  "matplotlib==3.9.2",
  "openai==1.55.2",
  "pandas==2.2.3",
  "pip==24.3.1",
  "praw==7.8.1",
  "pytest==8.3.3",
  "python-dotenv==1.0.1",
  "ruff==0.8.2",
  "scikit-learn==1.6.0",
  "selenium==4.25.0",
  "seaborn==0.13.2",
  "setuptools==70.0.0",
  "swifter==1.4.0",
  "torch==2.5.0",
  "tqdm==4.67.0",
  "wandb==0.18.5",
  "jupyter==1.1.1",
  "ipywidgets==8.1.5",
  "transformers===4.46.3 ",
  "jupyterlab==4.3.3",
  "notebook==7.3.1",
  "torch-geometric>=2.6.1",
  "cuml-cu12>=24.12.0",
  "papermill>=2.6.0",
  "pyarrow==18.1.0",
]

[project.urls]
Homepage = "https://github.com/CryptoFraudDetection/main"
Taskboard = "https://github.com/orgs/CryptoFraudDetection/projects/1"

[tool.ruff]
line-length = 79
lint.select = ["ALL"]
lint.exclude = ["D211", "D104"]
